--- a/app/src/main/res/menu/detail.xml
+++ b/app/src/main/res/menu/detail.xml
@@ -20,14 +20,9 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
     <item
-        android:id="@+id/action_refresh"
+        android:id="@+id/action_share"
         android:orderInCategory="1"
         android:title="@string/action_refresh"
         app:showAsAction="ifRoom"/>
 
-    <!--COMPLETED (1) Add a menu item to open the map-->
-    <item
-        android:id="@+id/action_open_map"
-        android:title="@string/action_open_map"
-        app:showAsAction="never"/>
 </menu>
