--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -23,19 +23,24 @@
         android:inputType="text"
         android:key="@string/pref_location_key"
         android:singleLine="true"
-        android:title="@string/pref_location_label" />
+        android:title="@string/pref_location_label"/>
 
     <ListPreference
         android:defaultValue="@string/pref_units_metric"
         android:entries="@array/pref_units_options"
         android:entryValues="@array/pref_units_values"
         android:key="@string/pref_units_key"
-        android:title="@string/pref_units_label" />
+        android:title="@string/pref_units_label"/>
 
-    <!-- TODO (9) Add a new resource file for boolean values in the res directory and call it bools.xml -->
-    <!-- TODO (10) Add a boolean value for showing notifications by default to res/bools.xml -->
 
-    <!-- TODO (11) Add a checkbox preference for enabling and disabling notifications -->
-    <!-- TODO (12) Set the default of whether or not to show preferences using bools.xml -->
+    <!-- COMPLETED (11) Add a checkbox preference for enabling and disabling notifications -->
+    <!-- COMPLETED (12) Set the default of whether or not to show preferences using bools.xml -->
+
+    <CheckBoxPreference
+        android:defaultValue="@bool/default_value_for_showing_notifications"
+        android:key="@string/pref_enable_notifications_key"
+        android:summaryOff="@string/pref_enable_notifications_false"
+        android:summaryOn="@string/pref_enable_notifications_true"
+        android:title="@string/pref_enable_notifications_label"/>
 
 </PreferenceScreen>
