--- a/app/src/main/res/values-port/bools.xml
+++ b/app/src/main/res/values-port/bools.xml
@@ -16,8 +16,10 @@
 -->
 
 <resources>
-    <bool name="show_notifications_by_default">true</bool>
-    <!-- COMPLETED (3) Add a bool called use_today_layout and set it to false -->
+
+
+    <!--COMPLETED (4) Create a resources file called bools.xml within the res/values-port directory-->
+    <!--COMPLETED (5) Within bools.xml in the portrait specific directory, add a bool called use_today_layout and set it to false-->
     <bool name="use_today_layout">true</bool>
 
 </resources>
